--- a/client/src/pages/Battle/battle.scss
+++ b/client/src/pages/Battle/battle.scss
@@ -47,6 +47,25 @@
 	}
 }
 
+.modal-content {
+	background-color: var(--background);
+	color: var(--text-primary);
+}
+
+.btn-close {
+	color: var(--text-primary);
+	background: none;
+	&::after {
+		content: '\2716';
+		font-size: 1.5rem;
+		color: var(--text-primary);
+		position: absolute;
+		top: 0;
+		right: 0;
+		margin: 10px;
+	}
+}
+
 .info-modal-action {
 	font-style: italic;
 	font-weight: 700;
